<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsAndPolicy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="CHÍNH SÁCH BẢO MẬT"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GIỚI THIỆU"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:justificationMode="inter_word"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"
            android:text="@string/pri1"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bảo mật dữ liệu"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pri2"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="BẢNG CHÚ GIẢI"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CƠ SỞ PHÁP LUẬT"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pri3"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"
            android:text="CÁC ĐIỀU KHOẢN VÀ ĐIỀU KIỆN"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Khả năng chấp nhận các Điều khoản và Tính hợp pháp của việc Sử dụng"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toc1"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toc2"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toc3"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Chính sách chơi trò chơi có trách nhiệm"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toc4"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toc41"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toc42"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toc43"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toc44"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toc45"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:shadowColor="#FF3D00"
            android:shadowRadius="5"/>

        <TextView
            android:id="@+id/bck"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:text="ĐỒNG Ý"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/tabbar"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:contentDescription="@string/button"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>